--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,14 @@
+language: elixir
+elixir:
+  - 1.2.3
+otp_release:
+  - 18.2
+sudo: false
+addons:
+  postgresql: "9.4"
+notifications:
+  recipients:
+    - pragmaticivan@gmail.com
 cache:
   directories:
     - _build
