Add coveralls travis script back to travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ notifications:
     - pragmaticivan@gmail.com
 env:
   - MIX_ENV=test
-script: mix test --include integration
+script: mix coveralls.travis
 cache:
   directories:
     - _build
