Remove temporary cache to prevent cache builds in the beginning of the projec

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ notifications:
 env:
   - MIX_ENV=test
 script: mix coveralls.travis
-cache:
-  directories:
-    - _build
-    - deps
+# cache:
+#   directories:
+#     - _build
+#     - deps
