--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
-  "repository": {
+  "repository": {},
+  "dependencies": {},
+  "devDependencies": {
+    "webpack": "^1.13.0"
   },
-  "dependencies": {
-    "babel-brunch": "~6.0.0",
-    "brunch": "~2.1.3",
-    "clean-css-brunch": "~1.8.0",
-    "css-brunch": "~1.7.0",
-    "javascript-brunch": "~1.8.0",
-    "uglify-js-brunch": "~1.7.0",
-    "phoenix": "file:deps/phoenix",
-    "phoenix_html": "file:deps/phoenix_html"
+  "scripts": {
+    "start": "webpack --watch-stdin --progress --color"
   }
 }
