--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "copy-webpack-plugin": "^2.1.1",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
     "node-sass": "^3.5.3",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
